[gd_scene load_steps=3 format=3 uid="uid://gnh1d27ng0nj"]

[ext_resource type="Script" uid="uid://cvgx0ard7foqq" path="res://scenes/ui/scripts/UtOption.gd" id="1_mi6dp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uhkpb"]

[node name="UtOption" type="Area2D"]
collision_layer = 0
collision_mask = 128
script = ExtResource("1_mi6dp")
metadata/_edit_group_ = true

[node name="selectRegion" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uhkpb")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
